--- a/css/style.css
+++ b/css/style.css
@@ -514,6 +514,7 @@ padding: 20px 24px;
 .footer-adress-map:hover {
     color: var(--color-logo);
 }
+/* SOCIAL LINKS */
 .footer-social {
     margin-left: 70px;
     margin-top: 72px;
@@ -538,6 +539,61 @@ padding: 20px 24px;
 .footer-social-list:hover .footer-social-link {
     background-color: var(--color-logo);
     cursor: pointer;
+}
+/* NEWSLETTER */
+.newsletter {
+    margin-top: 72px;
+    margin-left: 77px; 
+}
+.newsletter__title {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+.newsletter__elements {
+    display: flex;
+}
+.newsletter__input {
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    padding: 15px 295px 15px 16px;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    background-color: var(--color-background);
+    margin-top: 20px;
+    margin-right: 12px;
+}
+.newsletter__button {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    background-color: var(--color-logo);
+    border: none;
+    border-radius: 4px;
+    /* padding: 10px 28px 10px 42px; */
+    width: 200px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+.newsletter__svg {
+    fill: white;
+    margin-left: 24px;
 }
 /* MODAL */
 .backdrop {
@@ -642,24 +698,24 @@ padding: 20px 24px;
     line-height: 24px;
     letter-spacing: 0.03em;
   }
-  .form-element {
+  .form__element {
     display: flex;
     flex-direction: column;
     gap: 4px;
   }
-  .form-element input, textarea {
+  .form__element input, textarea {
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     outline: none;
   }
-  .form-element label {
+  .form__element label {
     font-weight: 400;
     font-size: 12px;
     line-height: 14px;
     color: #757575;
     letter-spacing: 0.01em;
   }
-  .form-element:focus-within input {
+  .form__element:focus-within input {
     border: 1px solid #2196F3;
   }
   .form__submit {
@@ -682,11 +738,18 @@ padding: 20px 24px;
   }
   .form-checkbox {
     flex-direction: row-reverse;
-    justify-content: flex-end;
+    justify-content:space-evenly;
   }
   .form-regulations {
     color:#2196F3;
     text-decoration: underline;
   }
-  
+  .test {
+    position: relative;
+}
+  .svg {
+    position: absolute;
+    top: 18px;
+    
+  }
   
