updating form in modal

--- a/css/style.css
+++ b/css/style.css
@@ -765,25 +765,32 @@ padding: 20px 24px;
     line-height: 24px;
     letter-spacing: 0.03em;
   }
-  .form__icon--agree {
-    padding: 4px 2px 3px 3px;
-  }
+
   .labelka {
     position: relative;
-    cursor: pointer;
-
+    /* outline: 2px solid red; */
+    
   }
   .input {
+    border: 2px solid #212121;
+    border-radius: 2px;
+    width: 16px;
+    height: 15px;
+    appearance: none;
+    margin-left: 15px;
+    
+  }
+  .form__icon--agree {
     position: absolute;
-    cursor: pointer;
+    left: 15px;
+    bottom: 4px;
     opacity: 0;
+    border-radius: 2px;
+    fill: #fff;
   }
-  .svg-use {
-    position: absolute;
-    left: 0;
-    top: 50%;
-    
+  .input:checked ~ .form__icon--agree {
+    background-color: #2196f3;
+    border-color: #2196f3;
+    opacity: 1;
   }
-  .input:checked {
-    
-  }
+
